auth-api/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth-api
  ports:
    - port: 8080
      targetPort: 8080
